YD-203 Added self-links
For:
* User activity overviews (both day and week), with and without buddies
* Buddy activity overviews (both day and week)

Specific tests are to be added and the formatting is to be corrected
